--- a/Site/Web2/css/estiloIndexAluno.css
+++ b/Site/Web2/css/estiloIndexAluno.css
@@ -31,14 +31,7 @@ h1 {
     width: 5vh;
     height: 5vh;
 }
-/* #sai svg{
-    height: 2rem !important;
-    width: 2rem !important;
-}
-#sair svg,.nav-link svg, .dropdown-item svg, #sai svg{
-    height: 2rem !important;
-    width: 2rem !important;
-} */
+
 
 
 /* //Extra small devices (portrait phones, less than 576px) */
@@ -51,10 +44,6 @@ h1 {
         margin-bottom: 1rem !important;
     }
     
-    #rodape svg {
-        height: 3vh;
-        width: 3vh;
-    }
     .indiciplina {
         height: max-content;
         padding-top: 5vh;
@@ -94,14 +83,9 @@ h1 {
         margin-top: 0 !important;
     }
     
-    #rodape svg {
-        height: 5vh;
-        width: 5vh;
-    }
     .indiciplina {
         height: 70vh !important;
         padding-top: 5vh;
-        
     }
     #sai{
         display: none;
@@ -116,17 +100,22 @@ h1 {
 /* // Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) and (orientation: landscape){
     .indiciplina {
-        height: 85vh;
+        height: max-content;
         padding-top: 10vh;
+        padding-bottom: 10vh;
     }
-
     #rodape {
         bottom: unset;
     }
     #sai{
         display: none;
     }
-    
+    h1{
+        font-size: 2rem !important;
+    }
+    p{
+        font-size: 1.5rem !important;
+    }
     
 }
 
